добавила независимое поведение двух слайдеров

--- a/index.html
+++ b/index.html
@@ -66,6 +66,64 @@
         <div class="slider_arrow-right"><img src="images/right-arrow.svg"></div>
     </div>
 </div>
+
+<div class="slider">
+    <div class="slider_header">Режимы работы</div>
+    <div class="slider_slider">
+        <div class="slider_item">
+            <div class="slider_name" >3D</div>
+            <div class="slider_value">Трехмерное пространство</div>
+            <div class="slider_title">Для работы в 3D-режиме достаточно простого ПК или ноутбука. VR-оборудование не
+                требуется. Проверить системные требования можно на нашем сайте.
+            </div>
+        </div>
+        <div class="slider_item">
+            <div class="slider_name">VR</div>
+            <div class="slider_value">Виртуальная реальность</div>
+            <div class="slider_title">Для работы в режиме VR потребуется VR-гарнитура и контроллеры. Узнайте, какая
+                VR-гарнитура подходит для запуска Varwin Education.
+            </div>
+        </div>
+        <div class="slider_item">
+            <div class="slider_name">AR</div>
+            <div class="slider_value">Дополненная реальность</div>
+            <div class="slider_title">Для работы в режиме AR требуется ПК/ноутбук и смартфон/планшет с установленным
+                ПО.
+            </div>
+        </div>
+        <div class="slider_item">
+            <div class="slider_name">XR</div>
+            <div class="slider_value">Расширенная реальность</div>
+            <div class="slider_title">Для работы в режиме XR потребуется голографическая система NettleDesk.</div>
+        </div>
+    </div>
+    <div class="slider_arrows">
+        <div class="slider_arrow-left"><img src="images/left-arrow.svg"></div>
+        <div class="slider_dots">
+            <div class="slider_dot">
+                <svg xmlns="http://www.w3.org/2000/svg" width="11" height="11" viewBox="0 0 11 11" fill="none">
+                    <circle cx="5.5" cy="5.5" r="4" stroke="#7749F8" stroke-width="2"/>
+                </svg>
+            </div>
+            <div class="slider_dot">
+                <svg xmlns="http://www.w3.org/2000/svg" width="11" height="11" viewBox="0 0 11 11" fill="none">
+                    <circle cx="5.5" cy="5.5" r="4" stroke="#7749F8" stroke-width="2"/>
+                </svg>
+            </div>
+            <div class="slider_dot" >
+                <svg xmlns="http://www.w3.org/2000/svg" width="11" height="11" viewBox="0 0 11 11" fill="none">
+                    <circle cx="5.5" cy="5.5" r="4" stroke="#7749F8" stroke-width="2"/>
+                </svg>
+            </div>
+            <div class="slider_dot" >
+                <svg xmlns="http://www.w3.org/2000/svg" width="11" height="11" viewBox="0 0 11 11" fill="none">
+                    <circle cx="5.5" cy="5.5" r="4" stroke="#7749F8" stroke-width="2"/>
+                </svg>
+            </div>
+        </div>
+        <div class="slider_arrow-right"><img src="images/right-arrow.svg"></div>
+    </div>
+</div>
 <script src="js/slider.js"></script>
 </body>
 </html>
